Prevent elements of main toolbar from wrapping (and disappearing) when page is resized

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -213,6 +213,7 @@ a.breadcrumb.currentLocation {
  	padding-right: 5px;
 	/* border-bottom: 1px solid #ebebeb; */
 	/* padding-left:50px; */
+	white-space: nowrap;
 }
 
 /* Filesystem switcher toolbar */
